[metadata]
name = zarpaint
author = Abigail McGovern and Juan Nunez-Iglesias
author_email = juan.nunez-iglesias@monash.edu
license = BSD-3
description = Paint segmentations directly to on-disk/remote zarr arrays
url = https://github.com/jni/zarpaint
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
install_requires =
    magicgui
    napari>=0.4.11.dev80
    napari-plugin-engine>=0.1.4
    numpy
    pyyaml
    qtpy
    scipy
    scikit-image
    toolz
    zarr

python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts = zarpaint = zarpaint._main:main
napari.manifest = 
    zarpaint = zarpaint:napari.yaml

[options.extras_require]
testing =
    coverage
    pytest
    pytest-cov
    tensorstore
    pytest-qt
    napari[pyqt5]

[options.package_data]
zarpaint = napari.yaml
